--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h3>
+      Salut Mon Amis!
+    </h3>
+  </header>
+  <main>
+    <h4>De Moi</h4>
+    <img src="https://i.ytimg.com/vi/jFr849fCuzQ/maxresdefault.jpg" alt="">
+    <p>Je m'appelle Zach. J'ai dix sept ans, et je peut parle en francais. Dans ete, je veut jouer mon video, mais j"ai besoin de travailler faire boucoup d'argent. Je travaille a le  Colorado Governor's Office of Information Technology avec boucoup de gens. C'est interessant.</p>
+  </main>   
+  <section>
+    <h5> Skills </h5>
+    <ul>
+      <li>Google Docs</li>
+      <li>Basic HTML and CSS</li>
+      <li>Passed several AP and College classes</li>
+    </ul>
+  </section>
+  </main>   
+  </body>
+</html>
